--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@ var ballY = 75;
 var ballSpeedX = 5;
 var ballSpeedY = 7;
 
-const BRICK_W = 80;
-const BRICK_H = 20;
-const BRICK_GAP = 2;
-const BRICK_COLS = 10;
-const BRICK_ROWS = 14;
-var brickGrid = new Array(BRICK_COLS * BRICK_ROWS);
-var bricksLeft = 0;
+const TRACK_W = 40;
+const TRACK_H = 40;
+const TRACK_GAP = 2;
+const TRACK_COLS = 20;
+const TRACK_ROWS = 15;
+var trackGrid = new Array(TRACK_COLS * TRACK_ROWS);
+var tracksLeft = 0;
 
 
 var canvas, canvasContext;
@@ -39,16 +39,16 @@ function updateMousePos(evt) {
 	
 }
 
-function brickReset(){
-	bricksLeft = 0;
-	for (var i = 0; i < 3 * BRICK_COLS * BRICK_ROWS ; i++) {
-		brickGrid[i] = false;
+function trackReset(){
+	tracksLeft = 0;
+	for (var i = 0; i < 3 * TRACK_COLS * TRACK_ROWS ; i++) {
+		trackGrid[i] = false;
 	}
-	for(var i = 3 * BRICK_COLS; i < BRICK_COLS * BRICK_ROWS; i++) {
-		brickGrid[i] = true;
-		bricksLeft++;
-} //end of for each brick
-} //end of brickReset function
+	for(var i = 3 * TRACK_COLS; i < TRACK_COLS * TRACK_ROWS; i++) {
+		trackGrid[i] = true;
+		tracksLeft++;
+} //end of for each Track
+} //end of TrackReset function
 
 window.onload = function() {
 	canvas = document.getElementById('gameCanvas');
@@ -59,7 +59,7 @@ window.onload = function() {
 
 	canvas.addEventListener('mousemove', updateMousePos);
 	
-	brickReset();
+	trackReset();
 	ballReset();
 }
 
@@ -89,52 +89,52 @@ function ballMove(){
 	}
 	if(ballY > canvas.height) { // bottom
 		ballReset();
-		brickReset();
+		TrackReset();
 	}
 
 }
 
-function isBrickAtRowCol(col, row) {
+function isTrackAtRowCol(col, row) {
 
-	if(col >= 0 && col < BRICK_COLS &&
-		row >=0 && row < BRICK_ROWS) {
-		 var brickIndexUnderCoord = rowColToArrayIndex(col, row);
-		 return brickGrid[brickIndexUnderCoord];
+	if(col >= 0 && col < TRACK_COLS &&
+		row >=0 && row < TRACK_ROWS) {
+		 var trackIndexUnderCoord = rowColToArrayIndex(col, row);
+		 return trackGrid[trackIndexUnderCoord];
 	} else {
 		return false;
 	}
 }
 
-function ballBrickHandling(){
-	var ballBrickCol = Math.floor(ballX / BRICK_W);
-	var ballBrickRow = Math.floor(ballY / BRICK_H);
-	var brickIndexUnderBall = rowColToArrayIndex(ballBrickCol, ballBrickRow);
+function ballTrackHandling(){
+	var ballTrackCol = Math.floor(ballX / TRACK_W);
+	var ballTrackRow = Math.floor(ballY / TRACK_H);
+	var trackIndexUnderBall = rowColToArrayIndex(ballTrackCol, ballTrackRow);
 	
-	if(ballBrickCol >= 0 && ballBrickCol < BRICK_COLS &&
-		ballBrickRow >=0 && ballBrickRow < BRICK_ROWS) {
+	if(ballTrackCol >= 0 && ballTrackCol < TRACK_COLS &&
+		ballTrackRow >=0 && ballTrackRow < TRACK_ROWS) {
 
-		if(isBrickAtRowCol(ballBrickCol, ballBrickRow)) {
-		brickGrid[brickIndexUnderBall] = false;
-		bricksLeft--;
-		//console.log(bricksLeft);
+		if(isTrackAtRowCol(ballTrackCol, ballTrackRow)) {
+		trackGrid[TrackIndexUnderBall] = false;
+		tracksLeft--;
+		//console.log(TracksLeft);
 		
 		var prevBallX = ballX - ballSpeedX;
 		var prevBallY = ballY - ballSpeedY;
-		var prevBrickCol = Math.floor(prevBallX /BRICK_W);
-		var prevBrickRow = Math.floor(prevBallY/BRICK_H);
+		var prevTrackCol = Math.floor(prevBallX /TRACK_W);
+		var prevTrackRow = Math.floor(prevBallY/TRACK_H);
 
 		var bothTestsFailed = true;
 
-		if(prevBrickCol != ballBrickCol) {
+		if(prevTrackCol != ballTrackCol) {
 
-			if(isBrickAtRowCol(prevBrickCol, ballBrickRow) == false) {
+			if(isTrackAtRowCol(prevTrackCol, ballTrackRow) == false) {
 				ballSpeedX *=-1;
 				bothTestsFailed = false;
 			}
 		}
 
-			if(prevBrickRow != ballBrickRow) {			
-				if(isBrickAtRowCol(ballBrickCol, prevBrickRow) == false) {
+			if(prevTrackRow != ballTrackRow) {			
+				if(isTrackAtRowCol(ballTrackCol, prevTrackRow) == false) {
 				ballSpeedY *= -1;
 				bothTestsFailed = false;
 				}
@@ -145,10 +145,10 @@ function ballBrickHandling(){
 			ballSpeedY *= -1;
 		}
 	
-		} //end of brick found
+		} //end of Track found
 	} //end of valid col and row
 
-} //end of ballBrickHandling func
+} //end of ballTrackHandling func
 
 
 
@@ -156,30 +156,30 @@ function ballBrickHandling(){
 function moveAll() {
 	ballMove();
 
-	ballBrickHandling();
+	ballTrackHandling();
 
 	
 }
 
 
 function rowColToArrayIndex (col, row) {
-	return col + BRICK_COLS * row;
+	return col + TRACK_COLS * row;
 }
 
 
-function drawBricks() {
-	for(var eachRow = 0; eachRow < BRICK_ROWS; eachRow++) {
-		for(var eachCol = 0;eachCol < BRICK_COLS; eachCol++) {
+function drawTracks() {
+	for(var eachRow = 0; eachRow < TRACK_ROWS; eachRow++) {
+		for(var eachCol = 0;eachCol < TRACK_COLS; eachCol++) {
 		
 		var arrayIndex = rowColToArrayIndex(eachCol, eachRow);
-		if(brickGrid[arrayIndex]){
-			colorRect(BRICK_W*eachCol,BRICK_H * eachRow, BRICK_W-BRICK_GAP, BRICK_H-BRICK_GAP, 'blue');
-		}	//end of is this brick here
+		if(trackGrid[arrayIndex]){
+			colorRect(TRACK_W*eachCol,TRACK_H * eachRow, TRACK_W-TRACK_GAP, TRACK_H-TRACK_GAP, 'blue');
+		}	//end of is this Track here
 
 
-	} //end of for each brick
+	} //end of for each Track
 }
-} //end of drawBricks()
+} //end of drawTracks()
 
 function drawAll() {
 	colorRect(0,0, canvas.width,canvas.height, 'black'); // clear screen
@@ -187,7 +187,7 @@ function drawAll() {
 	colorCircle(ballX,ballY, 10, 'white'); // draw ball
 
 
-	drawBricks();
+	drawTracks();
 
 
 
