--- a/index.html
+++ b/index.html
@@ -19,8 +19,23 @@ const TRACK_H = 40;
 const TRACK_GAP = 2;
 const TRACK_COLS = 20;
 const TRACK_ROWS = 15;
-var trackGrid = new Array(TRACK_COLS * TRACK_ROWS);
-var tracksLeft = 0;
+var trackGrid = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+				 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1,
+				 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,
+				 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1,
+				 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1,
+				 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1,
+				 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1,
+				 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1,
+				 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1,
+				 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1,
+				 1, 0, 2, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1,
+				 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1,
+				 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1,
+				 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1,
+				 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1
+				 ];
+
 
 var canvas, canvasContext;
 
@@ -41,13 +56,6 @@ function updateMousePos(evt) {
 	ballSpeedY = -4;*/
 }
 
-function trackReset() {
-	for(var i=0; i<TRACK_COLS * TRACK_ROWS; i++) {
-		trackGrid[i] = true;
-		tracksLeft++;
-	} // end of for each track
-} // end of trackReset func
-
 window.onload = function() {
 	canvas = document.getElementById('gameCanvas');
 	canvasContext = canvas.getContext('2d');
@@ -57,7 +65,6 @@ window.onload = function() {
 
 	canvas.addEventListener('mousemove', updateMousePos);
 
-	trackReset();
 	ballReset();
 }
 
@@ -67,8 +74,20 @@ function updateAll() {
 }
 
 function ballReset() {
-	ballX = canvas.width/2;
-	ballY = canvas.height/2;
+	for(var eachRow=0;eachRow<TRACK_ROWS;eachRow++) {
+		for(var eachCol=0;eachCol<TRACK_COLS;eachCol++) {
+			var arrayIndex = rowColToArrayIndex(eachCol, eachRow); 
+			if(trackGrid[arrayIndex] == 2) {
+				trackGrid[arrayIndex] = 0;
+				ballX = eachCol * TRACK_W + TRACK_W/2;
+				ballY = eachRow * TRACK_H + TRACK_H/2;
+
+
+			}
+
+
+		}
+	}
 }
 
 function ballMove() {
@@ -94,7 +113,7 @@ function isTrackAtColRow(col, row) {
 	if(col >= 0 && col < TRACK_COLS &&
 		row >= 0 && row < TRACK_ROWS) {
 		 var trackIndexUnderCoord = rowColToArrayIndex(col, row);
-		 return trackGrid[trackIndexUnderCoord];
+		 return (trackGrid[trackIndexUnderCoord] == 1);
 	} else {
 		return false;
 	}
@@ -109,8 +128,6 @@ function ballTrackHandling() {
 		ballTrackRow >= 0 && ballTrackRow < TRACK_ROWS) {
 
 		if(isTrackAtColRow( ballTrackCol,ballTrackRow )) {
-			trackGrid[trackIndexUnderBall] = false;
-			tracksLeft--;
 			// console.log(tracksLeft);
 
 			var prevBallX = ballX - ballSpeedX;
@@ -143,7 +160,7 @@ function ballTrackHandling() {
 } // end of ballTrackHandling func
 
 function moveAll() {
-	ballMove();
+	//ballMove();
 	
 	ballTrackHandling();
 }
@@ -159,7 +176,7 @@ function drawTracks() {
 
 			var arrayIndex = rowColToArrayIndex(eachCol, eachRow); 
 
-			if(trackGrid[arrayIndex]) {
+			if(trackGrid[arrayIndex] == 1) {
 				colorRect(TRACK_W*eachCol,TRACK_H*eachRow,
 					TRACK_W-TRACK_GAP,TRACK_H-TRACK_GAP, 'blue');
 			} // end of is this track here
