--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script>
+var carPic = document.createElement("img");
+var carPicLoaded = false;
+
 var ballX = 75;
 var ballY = 75;
 var ballSpeedX = 5;
@@ -64,6 +67,11 @@ window.onload = function() {
 	setInterval(updateAll, 1000/framesPerSecond);
 
 	canvas.addEventListener('mousemove', updateMousePos);
+
+	carPic.onload = function() {
+		carPicLoaded = true;
+	}
+	carPic.src = "player1car.png";
 
 	ballReset();
 }
@@ -160,7 +168,7 @@ function ballTrackHandling() {
 } // end of ballTrackHandling func
 
 function moveAll() {
-	//ballMove();
+	ballMove();
 	
 	ballTrackHandling();
 }
@@ -188,7 +196,11 @@ function drawTracks() {
 function drawAll() {
 	colorRect(0,0, canvas.width,canvas.height, 'black'); // clear screen
 
-	colorCircle(ballX,ballY, 10, 'white'); // draw ball
+	//colorCircle(ballX,ballY, 10, 'white'); // draw ball
+	if(carPicLoaded) {
+		canvasContext.drawImage(carPic,
+			ballX - carPic.width/2, ballY - carPic.height/2);
+	}
 
 	drawTracks();
 }
