Clean up some outdated code and fix bugs

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 var carPic = document.createElement("img");
 var carPicLoaded = false;
 
-var ballX = 75;
-var ballY = 75;
-var ballSpeedX = 5;
-var ballSpeedY = 7;
+var carX = 75;
+var carY = 75;
+var carAng = 0;
+var carSpeed = 2;
 
 const TRACK_W = 40;
 const TRACK_H = 40;
@@ -36,9 +36,7 @@ var trackGrid = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
 				 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1,
 				 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1,
 				 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1,
-				 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1
-				 ];
-
+				 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1];
 
 var canvas, canvasContext;
 
@@ -52,11 +50,11 @@ function updateMousePos(evt) {
 	mouseX = evt.clientX - rect.left - root.scrollLeft;
 	mouseY = evt.clientY - rect.top - root.scrollTop;
 
-	// cheat / hack to test ball in any position
-	/*ballX = mouseX;
-	ballY = mouseY;
-	ballSpeedX = 4;
-	ballSpeedY = -4;*/
+	// cheat / hack to test car in any position
+	/*carX = mouseX;
+	carY = mouseY;
+	carSpeedX = 4;
+	carSpeedY = -4;*/
 }
 
 window.onload = function() {
@@ -73,7 +71,7 @@ window.onload = function() {
 	}
 	carPic.src = "player1car.png";
 
-	ballReset();
+	carReset();
 }
 
 function updateAll() {
@@ -81,40 +79,25 @@ function updateAll() {
 	drawAll();
 }
 
-function ballReset() {
+function carReset() {
 	for(var eachRow=0;eachRow<TRACK_ROWS;eachRow++) {
 		for(var eachCol=0;eachCol<TRACK_COLS;eachCol++) {
 			var arrayIndex = rowColToArrayIndex(eachCol, eachRow); 
 			if(trackGrid[arrayIndex] == 2) {
 				trackGrid[arrayIndex] = 0;
-				ballX = eachCol * TRACK_W + TRACK_W/2;
-				ballY = eachRow * TRACK_H + TRACK_H/2;
-
-
+				carX = eachCol * TRACK_W + TRACK_W/2;
+				carY = eachRow * TRACK_H + TRACK_H/2;
 			}
-
-
 		}
 	}
 }
 
-function ballMove() {
-	ballX += ballSpeedX;
-	ballY += ballSpeedY;
+function carMove() {
+	carX += Math.cos(carAng) * carSpeed;
+	carY += Math.sin(carAng) * carSpeed;
 
-	if(ballX < 0 && ballSpeedX < 0.0) { //left
-		ballSpeedX *= -1;
-	}
-	if(ballX > canvas.width && ballSpeedX > 0.0) { // right
-		ballSpeedX *= -1;
-	}
-	if(ballY < 0 && ballSpeedY < 0.0) { // top
-		ballSpeedY *= -1;
-	}
-	if(ballY > canvas.height) { // bottom
-		ballReset();
-		trackReset();
-	}
+	carAng += 0.02;
+
 }
 
 function isTrackAtColRow(col, row) {
@@ -127,50 +110,25 @@ function isTrackAtColRow(col, row) {
 	}
 }
 
-function ballTrackHandling() {
-	var ballTrackCol = Math.floor(ballX / TRACK_W);
-	var ballTrackRow = Math.floor(ballY / TRACK_H);
-	var trackIndexUnderBall = rowColToArrayIndex(ballTrackCol, ballTrackRow);
+function carTrackHandling() {
+	var carTrackCol = Math.floor(carX / TRACK_W);
+	var carTrackRow = Math.floor(carY / TRACK_H);
+	var trackIndexUnderCar = rowColToArrayIndex(carTrackCol, carTrackRow);
 
-	if(ballTrackCol >= 0 && ballTrackCol < TRACK_COLS &&
-		ballTrackRow >= 0 && ballTrackRow < TRACK_ROWS) {
+	if(carTrackCol >= 0 && carTrackCol < TRACK_COLS &&
+		carTrackRow >= 0 && carTrackRow < TRACK_ROWS) {
 
-		if(isTrackAtColRow( ballTrackCol,ballTrackRow )) {
-			// console.log(tracksLeft);
-
-			var prevBallX = ballX - ballSpeedX;
-			var prevBallY = ballY - ballSpeedY;
-			var prevTrackCol = Math.floor(prevBallX / TRACK_W);
-			var prevTrackRow = Math.floor(prevBallY / TRACK_H);
-
-			var bothTestsFailed = true;
-
-			if(prevTrackCol != ballTrackCol) {
-				if(isTrackAtColRow(prevTrackCol, ballTrackRow) == false) {
-					ballSpeedX *= -1;
-					bothTestsFailed = false;
-				}
-			}
-			if(prevTrackRow != ballTrackRow) {
-				if(isTrackAtColRow(ballTrackCol, prevTrackRow) == false) {
-					ballSpeedY *= -1;
-					bothTestsFailed = false;
-				}
-			}
-
-			if(bothTestsFailed) { // armpit case, prevents ball from going through
-				ballSpeedX *= -1;
-				ballSpeedY *= -1;
-			}
+		if(isTrackAtColRow( carTrackCol,carTrackRow )) {
+			carSpeed *= -1;
 
 		} // end of track found
 	} // end of valid col and row
-} // end of ballTrackHandling func
+} // end of carTrackHandling func
 
 function moveAll() {
-	ballMove();
+	carMove();
 	
-	ballTrackHandling();
+	carTrackHandling();
 }
 
 function rowColToArrayIndex(col, row) {
@@ -196,13 +154,20 @@ function drawTracks() {
 function drawAll() {
 	colorRect(0,0, canvas.width,canvas.height, 'black'); // clear screen
 
-	//colorCircle(ballX,ballY, 10, 'white'); // draw ball
+	//colorCircle(carX,carY, 10, 'white'); // draw car
 	if(carPicLoaded) {
-		canvasContext.drawImage(carPic,
-			ballX - carPic.width/2, ballY - carPic.height/2);
+		drawBitmapCenteredWithRotation(carPic, carX,carY, carAng);
 	}
 
 	drawTracks();
+} 
+
+function drawBitmapCenteredWithRotation(useBitmap, atX,atY, withAng) {
+	canvasContext.save();
+	canvasContext.translate(atX, atY);
+	canvasContext.rotate(withAng);
+	canvasContext.drawImage(useBitmap, -useBitmap.width/2, -useBitmap.height/2);
+	canvasContext.restore();
 }
 
 function colorRect(topLeftX,topLeftY, boxWidth,boxHeight, fillColor) {
