--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ var carPicLoaded = false;
 var carX = 75;
 var carY = 75;
 var carAng = 0;
-var carSpeed = 2;
+var carSpeed = 0;
 
 const TRACK_W = 40;
 const TRACK_H = 40;
@@ -40,6 +40,17 @@ var trackGrid = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
 
 var canvas, canvasContext;
 
+const KEY_LEFT_ARROW = 37;
+const KEY_UP_ARROW = 38;
+const KEY_RIGHT_ARROW = 39;
+const KEY_DOWN_ARROW = 40;
+
+var keyHeld_Gas = false;
+var keyHeld_Reverse = false;
+var keyHeld_TurnLeft = false;
+var keyHeld_TurnRight = false;
+
+
 var mouseX = 0;
 var mouseY = 0;
 
@@ -57,6 +68,38 @@ function updateMousePos(evt) {
 	carSpeedY = -4;*/
 }
 
+function keyPressed(evt) {
+	// console.log("Key pressed: "+evt.keyCode);
+	if(evt.keyCode == KEY_LEFT_ARROW) {
+		keyHeld_TurnLeft = true;
+	}
+	if(evt.keyCode == KEY_RIGHT_ARROW) {
+		keyHeld_TurnRight = true;
+	}
+	if(evt.keyCode == KEY_UP_ARROW) {
+		keyHeld_Gas = true;
+	}
+	if(evt.keyCode == KEY_DOWN_ARROW) {
+		keyHeld_Reverse = true;
+	}
+	evt.preventDefault();
+}
+
+function keyReleased(evt) {
+	if(evt.keyCode == KEY_LEFT_ARROW) {
+		keyHeld_TurnLeft = false;
+	}
+	if(evt.keyCode == KEY_RIGHT_ARROW) {
+		keyHeld_TurnRight = false;
+	}
+	if(evt.keyCode == KEY_UP_ARROW) {
+		keyHeld_Gas = false;
+	}
+	if(evt.keyCode == KEY_DOWN_ARROW) {
+		keyHeld_Reverse = false;
+	}
+}
+
 window.onload = function() {
 	canvas = document.getElementById('gameCanvas');
 	canvasContext = canvas.getContext('2d');
@@ -65,6 +108,9 @@ window.onload = function() {
 	setInterval(updateAll, 1000/framesPerSecond);
 
 	canvas.addEventListener('mousemove', updateMousePos);
+
+	document.addEventListener('keydown', keyPressed);
+	document.addEventListener('keyup', keyReleased);
 
 	carPic.onload = function() {
 		carPicLoaded = true;
@@ -93,11 +139,22 @@ function carReset() {
 }
 
 function carMove() {
+	if(keyHeld_Gas) {
+		carSpeed += 0.2;
+	}
+	if(keyHeld_Reverse){
+		carSpeed -= 0.2;
+	}
+	if(keyHeld_TurnLeft){
+		carAng -= 0.04;
+	}
+	if(keyHeld_TurnRight){
+		carAng += 0.04;
+	}
+
+
 	carX += Math.cos(carAng) * carSpeed;
 	carY += Math.sin(carAng) * carSpeed;
-
-	carAng += 0.02;
-
 }
 
 function isTrackAtColRow(col, row) {
@@ -120,7 +177,6 @@ function carTrackHandling() {
 
 		if(isTrackAtColRow( carTrackCol,carTrackRow )) {
 			carSpeed *= -1;
-
 		} // end of track found
 	} // end of valid col and row
 } // end of carTrackHandling func
