Make car movement smoother

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ function carReset() {
 			var arrayIndex = rowColToArrayIndex(eachCol, eachRow); 
 			if(trackGrid[arrayIndex] == 2) {
 				trackGrid[arrayIndex] = 0;
+				carAng = -Math.PI/2;
 				carX = eachCol * TRACK_W + TRACK_W/2;
 				carY = eachRow * TRACK_H + TRACK_H/2;
 			}
@@ -139,8 +140,10 @@ function carReset() {
 }
 
 function carMove() {
+	carSpeed *= 0.97;
+
 	if(keyHeld_Gas) {
-		carSpeed += 0.2;
+		carSpeed += 0.3;
 	}
 	if(keyHeld_Reverse){
 		carSpeed -= 0.2;
@@ -176,7 +179,12 @@ function carTrackHandling() {
 		carTrackRow >= 0 && carTrackRow < TRACK_ROWS) {
 
 		if(isTrackAtColRow( carTrackCol,carTrackRow )) {
-			carSpeed *= -1;
+			// next two lines added to fix a bug, mentioned in video 9.6
+			// undoes the car movement which got it onto the wall
+			carX -= Math.cos(carAng) * carSpeed;
+			carY -= Math.sin(carAng) * carSpeed;
+
+			carSpeed *= -0.5;
 		} // end of track found
 	} // end of valid col and row
 } // end of carTrackHandling func
