--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@ var carY = 75;
 var carAng = 0;
 var carSpeed = 0;
 
+const GROUNDSPEED_DECAY_MULT = 0.94;
+const DRIVE_POWER = 0.5;
+const REVERSE_POWER = 0.2;
+const TURN_RATE = 0.03;
+
 const TRACK_W = 40;
 const TRACK_H = 40;
 const TRACK_GAP = 2;
@@ -37,6 +42,10 @@ var trackGrid = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
 				 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1,
 				 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1,
 				 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1];
+
+const TRACK_ROAD = 0;
+const TRACK_WALL = 1;
+const TRACK_PLAYERSTART = 2;
 
 var canvas, canvasContext;
 
@@ -129,8 +138,8 @@ function carReset() {
 	for(var eachRow=0;eachRow<TRACK_ROWS;eachRow++) {
 		for(var eachCol=0;eachCol<TRACK_COLS;eachCol++) {
 			var arrayIndex = rowColToArrayIndex(eachCol, eachRow); 
-			if(trackGrid[arrayIndex] == 2) {
-				trackGrid[arrayIndex] = 0;
+			if(trackGrid[arrayIndex] == TRACK_PLAYERSTART) {
+				trackGrid[arrayIndex] = TRACK_ROAD;
 				carAng = -Math.PI/2;
 				carX = eachCol * TRACK_W + TRACK_W/2;
 				carY = eachRow * TRACK_H + TRACK_H/2;
@@ -140,19 +149,19 @@ function carReset() {
 }
 
 function carMove() {
-	carSpeed *= 0.97;
+	carSpeed *= GROUNDSPEED_DECAY_MULT;
 
 	if(keyHeld_Gas) {
-		carSpeed += 0.3;
+		carSpeed += DRIVE_POWER;
 	}
 	if(keyHeld_Reverse){
-		carSpeed -= 0.2;
+		carSpeed -= REVERSE_POWER;
 	}
 	if(keyHeld_TurnLeft){
-		carAng -= 0.04;
+		carAng -= TURN_RATE;
 	}
 	if(keyHeld_TurnRight){
-		carAng += 0.04;
+		carAng += TURN_RATE;
 	}
 
 
@@ -160,11 +169,11 @@ function carMove() {
 	carY += Math.sin(carAng) * carSpeed;
 }
 
-function isTrackAtColRow(col, row) {
+function isWallAtColRow(col, row) {
 	if(col >= 0 && col < TRACK_COLS &&
 		row >= 0 && row < TRACK_ROWS) {
 		 var trackIndexUnderCoord = rowColToArrayIndex(col, row);
-		 return (trackGrid[trackIndexUnderCoord] == 1);
+		 return (trackGrid[trackIndexUnderCoord] == TRACK_WALL);
 	} else {
 		return false;
 	}
@@ -178,7 +187,7 @@ function carTrackHandling() {
 	if(carTrackCol >= 0 && carTrackCol < TRACK_COLS &&
 		carTrackRow >= 0 && carTrackRow < TRACK_ROWS) {
 
-		if(isTrackAtColRow( carTrackCol,carTrackRow )) {
+		if(isWallAtColRow( carTrackCol,carTrackRow )) {
 			// next two lines added to fix a bug, mentioned in video 9.6
 			// undoes the car movement which got it onto the wall
 			carX -= Math.cos(carAng) * carSpeed;
@@ -206,7 +215,7 @@ function drawTracks() {
 
 			var arrayIndex = rowColToArrayIndex(eachCol, eachRow); 
 
-			if(trackGrid[arrayIndex] == 1) {
+			if(trackGrid[arrayIndex] == TRACK_WALL) {
 				colorRect(TRACK_W*eachCol,TRACK_H*eachRow,
 					TRACK_W-TRACK_GAP,TRACK_H-TRACK_GAP, 'blue');
 			} // end of is this track here
