--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script src="GraphicsCommon.js"></script>
+<script src="Car.js"></script>
+<script src="Track.js"></script>
+<script src="Input.js"></script>
 <script src="Main.js"></script>
 
 </body>
